--- a/pseudoslam/envs/config/config.yaml
+++ b/pseudoslam/envs/config/config.yaml
@@ -1,7 +1,7 @@
 # world setting
 json_dir: ../../HouseExpo/json/
-map_id_set: ../../HouseExpo/map_id_train.txt
-meter2pixel: 16 # X pixel =1 meter
+map_id_set: ../../HouseExpo/map_id_10.txt
+meter2pixel: 32 # X pixel =1 meter
 mode: 0  # 0 for exploration mode, 1 for navigation mode
 
 obstacle:
@@ -11,22 +11,22 @@ obstacle:
     max: 0.6
 
 # robot setting
-robotRadius: 0.2 # robot radius in meter
+robotRadius: 0.05 # robot radius in meter
 stepLength:
   linear: 1 # robot linear movement in each step in meter
-  angular: 30 # robot angular movement in each step in degree
+  angular: 1 # robot angular movement in each step in degree
 startPose: # robot starting pose [y;x;theta] in meter in world coord with center as origin | theta: angle to the x-axis
   x: 0
   y: 0
   theta: 0
-resetRandomPose: 0 # flag of whether randomly set robot init pose ar each reset | if 0, robot reset to startPose at each reset
+resetRandomPose: 1 # flag of whether randomly set robot init pose ar each reset | if 0, robot reset to startPose at each reset
 
 # laser setting
 laser:
   range: 2 # laser range in meter
-  fov: 180 # laser field of view in degree
+  fov: 360 # laser field of view in degree
   resolution: 1 # laser rotation resolution in degree
-  noiseSigma: 0. # sigma of Gaussian distribution of laser noise
+  noiseSigma: 0.5 # sigma of Gaussian distribution of laser noise
 
 # slam setting
 slamError:
